# dev-eval-agent

./: .gitignore  README.md  ai_test_report_20250715_190256.json  ai_test_report_20250715_190758.json  github_docs.pkl  pipeline_state_20250715_190256.json  pipeline_state_20250715_190758.json  pyproject.toml
agents/: __init__.py  code_execution.py  main.py  report.py  test.py  test_plan.py
agents/doc_ingestion/: __init__.py  analyzer.py  crawl4ai.py  fetcher.py
agents/templates/: base.html  index.html  results.html
coding_agent_eval/: coding_agent.py  document_processor.py  fetcher.py  models.py  planner_agent.py  progressive_planner.py  utils.py
demos/: openweather-ai_test_report.json  rest-ai_test_report.json  rest-pipeline_state.json
doc_eval_agent/: code_execution.py  main.py  report.py  test.py  test_plan.py
doc_eval_agent/doc_ingestion/: analyzer.py  crawl4ai.py
doc_eval_agent/templates/: base.html  demos.html
docs/: 0.project.md  1.potential-tools.md  2.devtool-agent-readiness.md  3.progressive-planner-agent.md
nbs/: coding-agent-eval.ipynb  fetcher.ipynb
opentelemetry/: client.py  phase1.py  server.py
tests/: test_query.py  test_specific_queries.py  test_vector_store.py
